# IpeaPub

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  rag.py  requirements.txt  tech.txt  test.ipynb  test.json  utils.py
api/: .env_template  main.py
api/config/: prompts.py  settings.py
api/models/: document_models.py  rag_models.py  search.py
api/routers/: document_router.py  rag.py  rag_router.py  search.py  search_router.py
api/services/: document_service.py  embeddings.py  rag.py  rag_service.py  search.py  search_service.py
frontend/: app.js  index.html  style.css
ingestao/: create_collection.py  create_indexes.py  create_ingestion.py  run.py  scraper.py  teste_ingestion.py
ingestao/db/: banco_metadados.py
ingestao/teste/: teste_db.py  teste_ingestion.py
ingestao/utils/: clean_itens.py  semantic_chunker.py  simple_chunker.py
notebooks/: consulta.ipynb  testes.ipynb
src/: app.py  config.py  main.py  modelos.py
src/db/: banco1.py  banco_metadados.py  banco_vetorial.py
src/embeddings/: modelo_imagem.py  modelo_texto.py
src/graph/: pipeline_graph.py  prompts_graph.py  schemas_graph.py
src/ingestao/: __init__.py  cleaner.py  scraper.py
src/ingestor/: docling_pipeline.py  docling_setup.py  ingerir_imagem.py  ingerir_tabela.py  ingerir_texto.py  pipeline_extracao.py  scraper.py  utils.py
src/ner/: ner.py
src/pdf_scraping/: ingest_pipeline.py  processor.py  scrape.py  scraper.py
src/pdfplucker/: todo.txt
src/recuperacao/: pipeline.py  prompts.py  schemas.py  tools.py
src/retrieval/: rag_retriever.py
src_legado/ingestao/: utils.py  (+2 more)
(+4 files in other folders)
